--- a/blogging-app/src/components/common/Home.css
+++ b/blogging-app/src/components/common/Home.css
@@ -44,16 +44,16 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  max-width: 500px; /* optional: set max width */
-  max-height: 550px; /* optional: set max height */
-  overflow: hidden; /* hides overflow */
+  max-width: 500px; 
+  max-height: 550px; 
+  overflow: hidden; 
   position: relative;
 }
 
 .info-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* this is key */
+  object-fit: cover; 
   display: block;
 }
 
@@ -79,11 +79,11 @@
 
 .centered-image-container {
   width: 100%;
-  height: 400px; /* or any desired height */
+  height: 400px; 
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #b7b1b1; /* optional for visibility */
+  background-color: #b7b1b1; 
 }
 
 .centered-image {
